# M5StackTemplate

./: .clang-format  .gitignore  CMakeLists.txt  README.md  Tab5Template.srctrlprj  sdkconfig
Reference/app/: app.h
Reference/app/apps/: app_generator.py  app_installer.h
Reference/app/hal/: hal.cpp
Reference/app/shared/: shared.cpp  shared.h
Reference/smooth_ui_toolkit/: README.md
Reference/smooth_ui_toolkit/example/: dev_zone.cpp
Reference/smooth_ui_toolkit/test/: ringbuffer_test.cpp
app/: app.cpp
app/apps/: app_generator.py  app_installer.h
app/apps/app_launcher/: app_launcher.h
app/apps/app_startup_anim/: app_startup_anim.cpp  app_startup_anim.h
app/apps/app_template/: app_template.h
app/assets/images/: arrow_state_on.c  chg_arrow_up.c  internal_i2c_dev_chart.c  logo_tab.c  mouse_cursor.c  sw_off.c  (+4 more)
app/hal/: hal.cpp  hal.h
app/shared/: shared.h
components/Display/: CMakeLists.txt  Display.cpp  Display.hpp
components/HAL/: CMakeLists.txt
components/HalBase/: CMakeLists.txt  HalBase.cpp  HalBase.h
components/M5StackHAL/: CMakeLists.txt
components/Utilities/: CMakeLists.txt  Utils.cpp  Utils.hpp
components/imlib/: CMakeLists.txt
components/m5stack_tab5/: m5stack_tab5.c
components/rx8130/: CMakeLists.txt  rx8130.cpp
main/: CMakeLists.txt  app_main.cpp  idf_component.yml  kconfig.projbuild
main/assets/images/: chg_arrow_down.c  logo_5.c  porta_i2c_ext5v_on.c
main/hal/: hal_esp32.cpp  hal_esp32.h
main/hal/components/: hal_audio.cpp  hal_camera.cpp  hal_imu.cpp  hal_power.cpp  hal_rs485.cpp  hal_usb.cpp  hal_wifi.cpp
(+94 files in other folders)
